# web-software-development

./: README.md
docs/: api_design.md  database_design.md  deploy.md  functional_testing.md  login_design.md  overview.md
services/api-service/: .env  .gitignore  Dockerfile.api  docker-compose.yml  pom.xml
services/api-service/src/main/java/com/example/apiservice/: ApiService.java
services/api-service/src/main/java/com/example/apiservice/config/: RabbitConfig.java  (+2 more)
services/api-service/src/main/java/com/example/dormmanagement/: ApiService.java
services/api-service/src/main/resources/: application.properties
services/consumer-service/: .env  Dockerfile.consumer  docker-compose.yml  requirements.txt
services/consumer-service-rs/: Cargo.toml  Dockerfile.consumer  docker-compose.yml
services/consumer-service-rs/.cargo/: config
services/consumer-service-rs/src/: lib.rs  main.rs
services/consumer-service/consumer/: run.py  settings.py
services/db-service/: .env  .gitignore  docker-compose.yml  gen_sql.py
services/db-service/data/: .tb_all.sql  tb_auth.sql  tb_bed.sql  tb_building.sql  tb_room.sql  tb_student_info.sql  tb_user.sql
services/mq-service/: .env  .gitignore  docker-compose.yml
services/proxy-service/: .env  docker-compose.yml  nginx.conf
services/proxy-service/frontend/: index.html
services/proxy-service/frontend/js/: app.js  chunk-vendors.js
services/proxy-service/nginx/conf/: nginx.conf
services/proxy-service/nginx/conf/templates/: api.conf.template  default.conf.template
tests/: test_order_consume.py
tests/locustfiles/: api.py
(+187 files in other folders)
