[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-global-executor = "2"
futures-lite = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

mysql = "*"
mysql_common = { version = "*", features = ["chrono"] }
chrono = "0.4"
